# meta-ethantwardy

./: .envrc  .gitignore  Documentation.md  README  README.md  RECIPES.md  TODO  esdk-container.mk  requirements.txt
conf/: layer.conf
kas/: 0001-dovecot-Include-dovecot-config-in-dovecot-dev.patch  0001-meta-graphics-mesa-Fix-SRC_URI-upstream-domain-name.patch  0001-pipewire-Add-glib-2.0-native-dep-for-bluez5.patch  0001-postfix-Remove-postinst-ontarget-task.patch  0001-python3-poetry-core-upgrade-2.1.3-2.2.1.patch  0002-dovecot-Add-recipe-for-pigeonhole.patch  0002-meta-busybox-Apply-patch-to-fix-compilation-test.patch  0003-meta-libatomic-ops-Fix-SRC_URI.patch  backup-server-dev.yaml  backup-server.yaml  beaglebone-kirkstone.yaml  dns-qemu.yaml  dunfell.yaml  email-cloud.yaml  email-qemu.yaml  email-rpi-dev.yaml  email-rpi-provisioning.yaml  email-rpi.yaml  email.yaml  gadget.lock.yaml  gadget.yaml  hardknott.yaml  qemu-debug-kirkstone.yaml  rock64-dunfell.yaml  rock64-hardknott.yaml  rock64-mickledore.yaml  rpi-gadget.lock.yaml  rpi-gadget.yaml  stereo-gadget-dev-netboot.yaml  stereo-gadget-dev.yaml  stereo-gadget.yaml  yocto-player.yaml
layers/meta-backup-gadget/src/backup-controller/: Cargo.toml
layers/meta-backup-gadget/src/backup-controller/src/: executor.rs  job.rs  main.rs
layers/meta-backup-gadget/src/backup-controller/src/executor/: notify.rs  postfix.rs  tail.rs
meta-backup-gadget/: README
meta-email-gadget/: README  README.md
meta-gadget/: README.md
meta-rock64-bsp/: README
meta-rpi-gadget/: README
tools/: Containerfile  FlashSd.sh  (+7 more)
(+358 files in other folders)
